@@ -1,6 +1,5 @@
 package enums;
-import java.util.Arrays;
-import java.util.Collections;
+
 import java.util.List;
 import java.util.Random;
 
@@ -10,7 +9,7 @@ public enum ItemTypes {
     //STUN_GUN,
     //FIRE_GUN;
 
-    private static final List<ItemTypes> VALUES = Collections.unmodifiableList(Arrays.asList(values()));
+    private static final List<ItemTypes> VALUES = List.of(values());
     private static final int SIZE = VALUES.size();
     private static final Random RANDOM = new Random();
 
